<Page/> - fix image blurry edges (#6063)

--- a/src/Page/Page.scss
+++ b/src/Page/Page.scss
@@ -121,6 +121,7 @@ $minimizedHeaderContainerZIndex: $stickyZIndex + $zIndexLayerStep;
   top: 0;
   width: 100%;
   height: 100%;
+  transform: scale(1);
 
   &::after {
     content: '';
